--- a/css/tyyli.scss
+++ b/css/tyyli.scss
@@ -150,6 +150,25 @@ header {
 	height: 40vh;
 	width: auto;
 	background: $bg-color;
+	.pallo {
+		position: absolute;
+		display: block;
+		width: 100px;
+		height: 100px;
+		border-radius: 50%;
+	}
+	.nro1 {
+		left: 40%;
+		margin-left: -75px;
+		top: 65%;
+		background: radial-gradient(circle at 65% 15%, white 1px, aqua 3%, darkblue 60%, aqua 100%);
+	}
+	.nro2 {
+		top: 15%;
+		left: 70%;
+		margin-left: -100px;
+		background: radial-gradient(circle at 65% 15%, white 1px, aqua 3%, darkblue 60%, aqua 100%);
+	}
 }
 
 .card-group {
@@ -459,7 +478,12 @@ footer.tumma {
 		margin-left: -205px;
 		margin-top: -90px;
 	}
-
+	.grid {
+		.pallo {
+			height: 150px;
+			width: 150px;
+		}
+	}
 	.card {
 		position: relative;
 		height: 270px;
@@ -556,6 +580,9 @@ footer.tumma {
 	#yhteystiedot {
 		img {
 			margin-top: 50px;
+		}
+		h3 {
+			margin: 30px;
 		}
 	}
 }
