--- a/css/tyyli.scss
+++ b/css/tyyli.scss
@@ -387,8 +387,33 @@ section {
 			opacity: 1;
 		}
 	}
-	.tiimi {
+
+	#tarinamme {
+		margin: 20px;
+		h1 {
+			text-transform: uppercase;
+			font-weight: 700;
+		}
+	}
+	#tiimi {
 		line-height: 0;
+		#hallinto {
+			margin-top: 10px;
+			margin-bottom: 10px;
+		}
+		#myynti {
+			margin-top: 10px;
+			margin-bottom: 10px;
+		}
+		h2,
+		h4 {
+			text-transform: uppercase;
+			font-weight: 700;
+		}
+		i {
+			font-size: 3rem;
+			margin-bottom: 10px;
+		}
 	}
 }
 
@@ -568,6 +593,7 @@ footer.tumma {
 		} */
 	}
 	#tietoa-meistä {
+		margin-top: 40px;
 		img {
 			margin-top: 50px;
 			width: 70%;
@@ -583,6 +609,20 @@ footer.tumma {
 		}
 		h3 {
 			margin: 30px;
+		}
+	}
+	#tarinamme {
+		margin: 80px;
+	}
+	#tiimi {
+		line-height: 0;
+		#hallinto {
+			margin-top: 30px;
+			margin-bottom: 30px;
+		}
+		#myynti {
+			margin-top: 30px;
+			margin-bottom: 30px;
 		}
 	}
 }
