--- a/css/tyyli.css
+++ b/css/tyyli.css
@@ -51,11 +51,26 @@ a {
 
 .landing {
   height: 100vh;
+  position: relative;
+}
+
+.landing::after {
+  content: "";
+  background: url(/img/TCsvg.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 60%;
+  opacity: 0.2;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
 }
 
 header {
-  margin-top: 20px;
-  height: 10vh;
+  height: 8vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -69,6 +84,7 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-bottom: 10vh;
   background-position: center;
   background-repeat: no-repeat;
   border-radius: 20px 20px 0 0;
@@ -146,162 +162,25 @@ header #mode {
           transform: translate3d(25%, 0, 0);
 }
 
-/* Visa kortti */
-.kortti {
-  height: 40vh;
-}
-
-.grid {
-  position: relative;
-  height: 40vh;
-  width: auto;
-  background: #e3f2fd;
-}
-
-.grid .pallo {
-  position: absolute;
-  display: block;
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
-}
-
-.grid .nro1 {
-  left: 40%;
-  margin-left: -75px;
-  top: 65%;
-  background: radial-gradient(circle at 65% 15%, white 1px, aqua 3%, darkblue 60%, aqua 100%);
-}
-
-.grid .nro2 {
-  width: 150px;
-  height: 150px;
-  top: 15%;
-  left: 70%;
-  margin-left: -100px;
-  background: radial-gradient(circle at 65% 15%, white 1px, aqua 3%, darkblue 60%, aqua 100%);
-}
-
-.card-group {
-  position: absolute;
-  top: 45%;
-  margin-top: -40px;
-  left: 50%;
-  margin-left: -165px;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  -webkit-transform: rotate(15deg);
-          transform: rotate(15deg);
-}
-
-.card {
-  position: relative;
-  height: 189px;
-  width: 315px;
-  border-radius: 25px;
-  background: rgba(255, 255, 255, 0.2);
-  -webkit-backdrop-filter: blur(30px);
-          backdrop-filter: blur(30px);
-  /* This will produce the blur */
-  border: 2px solid rgba(255, 255, 255, 0.1);
-  -webkit-box-shadow: 0 0 80px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 0 80px rgba(0, 0, 0, 0.2);
-  overflow: hidden;
-}
-
-.logo img,
-.chip img,
-.number,
-.name,
-.from,
-.to,
-.ring {
-  position: absolute;
-  /* All items inside card should have absolute position */
-}
-
-.logo img {
-  top: 35px;
-  right: 40px;
-  width: 80px;
-  height: auto;
-  opacity: 0.8;
-}
-
-.chip img {
-  top: 84px;
-  left: 28px;
-  width: 35px;
-  height: auto;
-  opacity: 0.8;
-}
-
-.number,
-.name,
-.from,
-.to {
-  color: rgba(0, 0, 0, 0.8);
-  font-weight: 400;
-  letter-spacing: 2px;
-  text-shadow: 0 0 2px rgba(0, 0, 0, 0.6);
-}
-
-.number {
-  left: 28px;
-  bottom: 46px;
-  font-family: "Nunito", sans-serif;
-}
-
-.name {
-  font-size: 0.7rem;
-  left: 28px;
-  bottom: 25px;
-}
-
-.from {
-  font-size: 0.5rem;
-  bottom: 25px;
-  right: 77px;
-}
-
-.to {
-  font-size: 0.5rem;
-  bottom: 25px;
-  right: 28px;
-}
-
 /* tervetuloa animaatiot */
-.ml12 {
-  margin-top: 50px;
-  font-weight: 700;
-  font-size: clamp(1.5em, 3.5vw, 2.5em);
-  text-transform: uppercase;
-  letter-spacing: 0.2em;
-  color: #03dac5;
-}
-
-.ml13 {
-  font-weight: 700;
-  font-size: clamp(1.2em, 3vw, 2.1em);
-  text-transform: uppercase;
-  letter-spacing: 0.2em;
-  color: #03dac5;
-}
-
-.ml14 {
-  font-weight: 700;
-  font-size: clamp(1.5em, 3vw, 2.5em);
-  text-transform: uppercase;
-  letter-spacing: 0.2em;
-  color: #03dac5;
-}
-
 .ml15 {
   font-weight: 700;
-  font-size: clamp(1.5em, 3vw, 2.5em);
+  font-size: clamp(1.6em, 2.5vw, 3em);
   text-transform: uppercase;
-  letter-spacing: 0.2em;
-  color: #03dac5;
+  letter-spacing: 0.5em;
+}
+
+.ml15 .word {
+  display: inline-block;
+  line-height: 1em;
+}
+
+.ml12 {
+  margin-top: 100px;
+  font-weight: 700;
+  font-size: clamp(0.8em, 2.5vw, 2em);
+  text-transform: uppercase;
+  letter-spacing: 0.5em;
 }
 
 .ml12 .letter {
@@ -309,10 +188,21 @@ header #mode {
   line-height: 1em;
 }
 
-.nappi {
-  font-size: clamp(1.2em, 2.5vw, 2em);
+.ml13 {
   font-weight: 700;
-  color: rgba(0, 0, 0, 0.6);
+  font-size: clamp(0.8em, 2.5vw, 2em);
+  text-transform: uppercase;
+  letter-spacing: 0.5em;
+}
+
+.ml13 .letter {
+  display: inline-block;
+  line-height: 1em;
+}
+
+.nappi {
+  font-size: clamp(1em, 2.5vw, 2em);
+  margin-top: 100px;
 }
 
 /* buttonit */
