--- a/css/tyyli.css
+++ b/css/tyyli.css
@@ -60,7 +60,7 @@ a {
   background-repeat: no-repeat;
   background-position: center;
   background-size: 60%;
-  opacity: 0.2;
+  opacity: 0.1;
   top: 0;
   left: 0;
   bottom: 0;
@@ -162,10 +162,55 @@ header #mode {
           transform: translate3d(25%, 0, 0);
 }
 
-/* animaatiot */
-.animaatio {
-  width: 50vw;
-  height: 40vh;
+/* animaatiot  ja alku tekstit*/
+.container2 {
+  height: 80hv;
+}
+
+.selitys {
+  position: absolute;
+  bottom: 35vh;
+  left: 0;
+  right: 0;
+  font-weight: 700;
+}
+
+.scene,
+canvas {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+/* buttonit */
+.btn {
+  border-radius: 500px;
+}
+
+.btn-group {
+  z-index: 100;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.btn-group img {
+  width: 25px;
+}
+
+.btn-group a {
+  color: black;
+}
+
+.btn-group i {
+  color: black;
+  font-size: 1.5rem;
+}
+
+.btn-group .btn {
+  border-radius: 0;
+  font-size: 0.7rem;
 }
 
 /* sectionit alkaa */
