--- a/css/tyyli.scss
+++ b/css/tyyli.scss
@@ -75,21 +75,25 @@ a {
 .landing {
 	height: 100vh;
 	position: relative;
+	background: url(/img/luotettu2.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
 }
-.landing::after {
+/* .landing::after {
 	content: "";
-	background: url(/img/TCsvg.svg);
+	background: url(/img/luotettu2.jpg);
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: 60%;
-	opacity: 0.1;
+	opacity: 0.3;
 	top: 0;
 	left: 0;
 	bottom: 0;
 	right: 0;
 	position: absolute;
-	z-index: -1;
-}
+	z-index: 1;
+} */
 
 header {
 	height: 8vh;
@@ -100,7 +104,7 @@ header {
 	margin-bottom: 10vh;
 	background-position: center;
 	background-repeat: no-repeat;
-	border-radius: 20px 20px 0 0;
+
 	background: #e3f2fd;
 	box-shadow: 27px 27px 54px #8a949a, -27px -27px 54px #ffffff;
 
@@ -167,12 +171,23 @@ header {
 }
 .selitys {
 	position: absolute;
-	bottom: 35vh;
+	bottom: 25vh;
 	left: 0;
 	right: 0;
-	font-weight: 700;
-}
 
+	color: $bg-color;
+	h2 {
+		font-weight: 700;
+		font-size: clamp(1.7rem, 5vw, 4rem);
+	}
+	h4 {
+		font-weight: 700;
+		font-size: clamp(1.2rem, 5vw, 3rem);
+	}
+}
+.nappi {
+	margin-top: 12vh;
+}
 .scene,
 canvas {
 	position: absolute;
@@ -349,7 +364,7 @@ body.tumma {
 }
 #header.tumma {
 	background: $prim-tumma;
-	border-radius: 20px 20px 0 0;
+
 	background: #2f2828;
 	box-shadow: 27px 27px 54px #262020, -27px -27px 54px #383030;
 }
