--- a/css/tyyli.scss
+++ b/css/tyyli.scss
@@ -1,26 +1,34 @@
 $transition-time: 0.3s;
-$bg-color: #e3f2fd;
+$bg-color: #ffffff;
 $prim-purple: #bb86fc;
 $prim-green: #03dac5;
-
+$prim-tc: #18447e;
 $prim-red: #ff0266;
 $color: #2f2828;
 $prim-tumma: #2f2828;
 @mixin varjo-koholla {
-	border-radius: 20px;
-	background: #e3f2fd;
-	box-shadow: 27px 27px 54px #8a949a, -27px -27px 54px #ffffff;
+	border-radius: 37px;
+	background: #18447e;
+	box-shadow: 23px 23px 45px #6a6a6b, -23px -23px 45px #afb9c5;
+	h2,
+	h4 {
+		color: white;
+	}
+	p {
+		color: white;
+	}
 }
 @mixin varjo-koholla-tumma {
 	border-radius: 20px;
 	background: #2f2828;
-	box-shadow: 27px 27px 54px #262020, -27px -27px 54px #383030;
+	box-shadow: 27px 27px 54px #262020, -27px -27px 54px #fdf7f7;
 }
 
 @mixin varjo-painunut {
 	border-radius: 20px;
-	background: #e3f2fd;
-	box-shadow: inset 20px 20px 60px #c1ced7, inset -20px -20px 60px #ffffff;
+	background: $prim-tc;
+	box-shadow: inset 10px 10px 30px #054394, inset -10px -10px 30px #0755bb;
+	color: white;
 }
 
 @mixin varjo-painunut-tumma {
@@ -45,8 +53,9 @@ body {
 .navbar {
 	margin: 0;
 	padding: 0;
+
 	.container-fluid {
-		background: #ffc107;
+		background: $prim-tc;
 	}
 	img {
 		width: 70%;
@@ -54,12 +63,11 @@ body {
 	button {
 		background: $prim-purple;
 	}
+
 	.dropdown-menu {
-		background: #ffc107;
-		li {
-			a:hover {
-				background-color: #eed37b;
-			}
+		a:hover {
+			background-color: $prim-tc;
+			color: white;
 		}
 	}
 }
@@ -70,15 +78,24 @@ body {
 
 a {
 	text-decoration: none;
-	color: $prim-green;
+	color: white;
 }
 .landing {
-	height: 100vh;
+	video {
+		object-fit: cover;
+		width: 100vw;
+		height: 100vh;
+		position: relative;
+		top: 0;
+		left: 0;
+	}
+
+	/* height: 100vh;
 	position: relative;
 	background: url(/img/luotettu2.jpg);
 	background-repeat: no-repeat;
 	background-position: center;
-	background-size: cover;
+	background-size: cover; */
 }
 /* .landing::after {
 	content: "";
@@ -175,18 +192,16 @@ header {
 	left: 0;
 	right: 0;
 
-	color: $bg-color;
-	h2 {
+	color: white;
+	h1 {
 		font-weight: 700;
-		font-size: clamp(1.7rem, 5vw, 4rem);
+		font-size: clamp(1.9rem, 5vw, 4rem);
+
+		h4 {
+			font-weight: 700;
+			font-size: clamp(1.4rem, 4vw, 3rem);
+		}
 	}
-	h4 {
-		font-weight: 700;
-		font-size: clamp(1.2rem, 5vw, 3rem);
-	}
-}
-.nappi {
-	margin-top: 12vh;
 }
 .scene,
 canvas {
@@ -209,23 +224,28 @@ canvas {
 		width: 25px;
 	}
 	a {
-		color: black;
 	}
 	i {
-		color: black;
 		font-size: 1.5rem;
 	}
 	.btn {
 		border-radius: 0;
 		font-size: 0.7rem;
+		background-color: $prim-tc;
+		color: white;
 	}
+}
+.nappi {
+	margin-top: 12vh;
+	background-color: $prim-tc;
+	color: white;
 }
 /* sectionit alkaa */
 section {
 	margin-top: 60px;
 	margin-left: 20px;
 	margin-right: 20px;
-
+	h4,
 	h2 {
 		margin-bottom: 20px;
 		padding: 10px;
@@ -233,7 +253,7 @@ section {
 	i {
 		font-size: 2rem;
 		margin-bottom: 10px;
-		color: $prim-green;
+		color: white;
 	}
 	p {
 		margin-bottom: 10px;
@@ -265,6 +285,9 @@ section {
 	form {
 		display: inline-block;
 		height: 500px;
+		background-color: $prim-tc;
+		padding: 10px 40px;
+		border-radius: 10px;
 	}
 	.field {
 		padding-top: 10px;
@@ -281,13 +304,13 @@ section {
 		textarea {
 			border-radius: 5px;
 			border: none;
-			padding: 5px;
 		}
 		input:focus {
 			border-bottom: 2px solid black;
 		}
 		input:focus + label {
 			transform: translateY(-1px);
+			color: white;
 			transform: scale(1.4);
 			opacity: 1;
 		}
@@ -296,6 +319,7 @@ section {
 			outline: none;
 		}
 		textarea:focus + label {
+			color: white;
 			transform: translateY(-270px);
 			transform: scale(1.4);
 			opacity: 1;
@@ -346,7 +370,7 @@ footer {
 	}
 	i {
 		font-size: 3rem;
-		color: #18447e;
+		color: white;
 
 		margin-top: 10px;
 	}
@@ -358,7 +382,7 @@ footer {
 
 /* tummaversio */
 
-body.tumma {
+/* body.tumma {
 	background: $prim-tumma;
 	color: rgba($color: #ffffff, $alpha: 0.6);
 }
@@ -403,7 +427,7 @@ section.tumma {
 footer.tumma {
 	@include varjo-painunut-tumma();
 }
-
+ */
 /* mediaqueryt ja isomman version asetukset */
 
 @media screen and (min-width: 992px) {
@@ -415,94 +439,9 @@ footer.tumma {
 }
 
 @media screen and (min-width: 992px) {
-	.btn-warning {
+	.btn {
 		padding-left: 50px;
 		padding-right: 50px;
-	}
-	.card-group {
-		left: 50%;
-		margin-left: -205px;
-		margin-top: -90px;
-	}
-	.grid {
-		.pallo {
-			height: 150px;
-			width: 150px;
-		}
-		.nro2 {
-			height: 200px;
-			width: 200px;
-		}
-	}
-	.card {
-		position: relative;
-		height: 270px;
-		width: 450px;
-		border-radius: 25px;
-		background: rgba(255, 255, 255, 0.2);
-		backdrop-filter: blur(30px); /* This will produce the blur */
-		border: 2px solid rgba(255, 255, 255, 0.1);
-		box-shadow: 0 0 80px rgba(0, 0, 0, 0.2);
-		overflow: hidden;
-	}
-	.logo img,
-	.chip img,
-	.number,
-	.name,
-	.from,
-	.to,
-	.ring {
-		position: absolute; /* All items inside card should have absolute position */
-	}
-
-	.logo img {
-		top: 35px;
-		right: 40px;
-		width: 80px;
-		height: auto;
-		opacity: 0.8;
-	}
-
-	.chip img {
-		top: 120px;
-		left: 40px;
-		width: 50px;
-		height: auto;
-		opacity: 0.8;
-	}
-
-	.number,
-	.name,
-	.from,
-	.to {
-		color: rgba(0, 0, 0, 0.8);
-		font-weight: 400;
-		letter-spacing: 2px;
-		text-shadow: 0 0 2px rgba(0, 0, 0, 0.6);
-	}
-
-	.number {
-		left: 40px;
-		bottom: 65px;
-		font-family: "Nunito", sans-serif;
-	}
-
-	.name {
-		font-size: 1rem;
-		left: 40px;
-		bottom: 35px;
-	}
-
-	.from {
-		font-size: 0.5rem;
-		bottom: 35px;
-		right: 110px;
-	}
-
-	.to {
-		font-size: 0.5rem;
-		bottom: 35px;
-		right: 40px;
 	}
 
 	#palvelumme {
